--- a/project/static/css/styles.css
+++ b/project/static/css/styles.css
@@ -1,4 +1,3 @@
-/* design intentionally made horrible to see who doesn't change it*/
 body {
     font-family: monospace;
     font-size: 1.5em;
@@ -28,18 +27,27 @@ ul[class="nav"]{
     background-color: #CE93D8;
 }
 
+form {
+    margin: inherit;
+    display: table;
+}
+
+form > p {
+    display: table-row;
+}
+
 input, select {
-    width: 30% !important; 
+    width: 120%; 
     padding: 12px 20px;
     margin: 8px 0;
-    display: inline-block;
+    display: table-cell; //inline-block;
     border: 1px solid #ccc;
     border-radius: 4px;
     box-sizing: border-box;
 }
 
 input[type=submit] {
-    width: 20%;
+    width: 90%;
     background-color: #9C27B0;
     color: white;
     padding: 14px 20px;
@@ -49,4 +57,8 @@ input[type=submit] {
     cursor: pointer;
     font-size: 18;
     font-family: monospace;
+}
+
+input[type=submit]:hover {
+    background-color: #BE49D2;
 }
