Added add_product.php for admin

--- a/project/static/css/styles.css
+++ b/project/static/css/styles.css
@@ -37,7 +37,7 @@ form > p {
 }
 
 input, select {
-    width: 120%; 
+    width: 100%;
     padding: 12px 20px;
     margin: 8px 0;
     display: table-cell; //inline-block;
@@ -83,4 +83,8 @@ div.quantity {
 div.card-body {
     font-family: Arial;
     font-size: 0.8em;
+}
+
+input[type="radio"]{
+    width:20px;
 }
